[project]
name = "mcleyline"
version = "0.1.0"
description = "Silly ML Project showcasing ability to generate laylines from datapoints"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
